# embedded_memory

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  BUILD  CHANGELOG  LICENSE  MODULE.bazel  README.md  WORKSPACE
doc/: algorithms.md
include/: allocator.hpp  em.hpp  embedded_memory.hpp
src/: allocator.cpp  allocator_config.cpp  allocator_config.hpp  memory_pool.hpp  memory_pool_interfaces.hpp  memory_slot.hpp
tests/: allocator_tests.cpp  memory_pool_tests.cpp
